====20170209====
1、开发录入客户时，增加不诚信状态判断以及是否已经存在相同的客户且最近合作时间小于30天的判断。  //0.5人天
2、admin页面中增加customer表管理。 //0.5人天
3、开发日志功能。   //1人天