@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
-  <component name="DataSourceManagerImpl" format="xml" hash="2490278905">
+  <component name="DataSourceManagerImpl" format="xml" multifile-model="true">
     <data-source source="LOCAL" name="MySQL - shande@localhost" uuid="998a23e0-cc44-4f2a-bfeb-756e3d16ad1f">
       <driver-ref>mysql</driver-ref>
       <synchronize>true</synchronize>
@@ -16,7 +16,7 @@
       </driver-properties>
     </data-source>
     <data-source source="LOCAL" name="Django default" uuid="669e403f-d760-4c3d-83eb-626cc3d2b7e6">
-      <driver-ref>ce6b196a-91d5-4a3d-8fb0-b0f98b9c3ecd</driver-ref>
+      <driver-ref>458b49c9-8e2f-4170-b7c4-12a682238033</driver-ref>
       <synchronize>true</synchronize>
       <imported>true</imported>
       <remarks>$PROJECT_DIR$/shande/settings.py</remarks>
