@@ -49,8 +49,8 @@
                         data-id="{{ trade.id }}"
                         data-paycash="{{ trade.commission }}"
                     >收款</button>
-                {% endif %}
-                {% if request.user.userprofile.title.role_name in "bursar admin bursarmanger ops" %}
+{#                {% endif %}#}
+{#                {% if request.user.userprofile.title.role_name in "bursar admin bursarmanger ops" %}#}
                     <button type="button" class="btn btn-sm btn-primary" onclick="backTrade(this)"
                         data-id="{{ trade.id }}"
                         data-paycash="{{ trade.commission }}"
