@@ -2,3 +2,15 @@
 1、开发录入客户时，增加不诚信状态判断以及是否已经存在相同的客户且最近合作时间小于30天的判断。  //0.5人天
 2、admin页面中增加customer表管理。 //0.5人天
 3、开发日志功能。   //1人天
+4、增加客户管理专员菜单盈亏透视分析表翻页功能。  //1人天
+5、增加后台管理-customer表格查看功能，新增财务组财务ID新建自定义功能，开发菜单--有效客户增长趋势---柱状图显示  //0.5人天
+6、开发交易管理菜单---交割单上传、更新、显示、文件大小控制功能，最近买入栏交割单显示功能        //3人天
+
+
+
+修复：
+修复开发菜单---客户管理顺序
+修复收款管理页面---查看权限问题
+修复客户--teacher--财务绑定问题
+修复开发菜单--客户管理--搜索编辑后页面显示翻页bug
+
